# OpenGL-OGLE-Engine_WIP

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  OpenGL_2DEngine.sln  README.md  premake5  premake5.lua
Engine/: CMakeLists.txt  OpenGL_2DEngine.vcxproj  OpenGL_2DEngine.vcxproj.filters  premake5.lua
Engine/Dependencies/glfw/lib/: glfw3.lib
Engine/Engine.xcodeproj/: project.pbxproj
Engine/Resources/Shaders/: fragmentShader.shader  vertexShader.shader
Engine/Src/: OEPCH.cpp  OEPCH.h  OGLE.h  main.cpp  oglepch.h
Engine/Src/Actors/: ActorObject.h  PlayerObject.h
Engine/Src/Core/: Application.cpp  Application.h  Camera2D.cpp  Camera2D.h  Cursor.h  Image.cpp  Image.h  Point.h  Rect.cpp  Rect.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Time.cpp  Time.h  Transform.cpp  Transform.h
Engine/Src/Core/Camera/: Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  OrthographicCamera.cpp  OrthographicCamera.h
Engine/Src/Core/Input/: InputAction.cpp  InputAction.h  (+5 more)
Engine/Src/Input/: InputManager.cpp  InputManager.h
Engine/Src/Resources/: Image.cpp  Image.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h
Engine/Src/Scene/: Components.h  Entity.h  Scene.h
Engine/Src/Tools/: FileHandler.h  SharedAssets.h  TRegistry.h  TShared.h  TSingleton.h
Engine/Src/Utils/: Color.cpp  Color.h  Math.h  Matrix.h  Quaternion.h  Utils.h  Vector.h
Engine/Src/World/: DefaultWorldManager.cpp  DefaultWorldManager.h  World.cpp  World.h  WorldManager.h  WorldState.cpp  WorldState.h
Engine/include/Engine/: OGLE.h
(+29 files in other folders)
